# SilkOS

./: LICENSE  README.md
.github/workflows/: main.yml
Base/etc/: LaunchServer.ini  WindowServer.ini
Base/home/anon/.config/: bookmarks.json
Base/res/apps/: Browser.af
Base/res/html/misc/: welcome.html
Base/res/ladybird/: newtab.html
Base/res/ladybird/templates/: version.html
Base/res/themes/: Serenity.ini  Silk.ini
Base/usr/share/Welcome/: tips.txt
Base/var/www/: index.html
Kernel/Syscalls/: uname.cpp
Ladybird/AppKit/UI/: Tab.mm
Ladybird/Qt/: Tab.cpp
Ladybird/cmake/: ResourceFiles.cmake
Meta/: build-root-filesystem.sh  grub-ebr.cfg  grub-gpt.cfg  grub-mbr.cfg  limine.cfg  run.py  silkos.sh
Meta/CMake/: utils.cmake
Meta/gn/secondary/Ladybird/: BUILD.gn
Ports/: AvailablePorts.md  README.md
Ports/silkos-theming/: package.sh
Userland/Applications/Assistant/: Providers.h
Userland/Applications/Browser/: BrowserWindow.cpp  CMakeLists.txt  IconBag.cpp  WindowActions.cpp  main.cpp
Userland/Applications/BrowserSettings/: CMakeLists.txt  main.cpp
Userland/Applications/ClockSettings/: TimeZoneSettingsWidget.cpp
Userland/Applications/Maps/: main.cpp
Userland/Applications/Welcome/: WelcomeWidget.cpp  WelcomeWindow.gml
Userland/Demos/WidgetGallery/: GalleryWidget.cpp
Userland/DevTools/HackStudio/: Project.cpp
Userland/Libraries/LibGUI/: AboutDialog.gml
Userland/Libraries/LibWeb/Loader/: UserAgent.h
Userland/Services/Taskbar/: ShutdownDialog.cpp  TaskbarWindow.cpp  main.cpp
Userland/Services/WebServer/: Client.cpp
(+37 files in other folders)
