serenity_component(
    Browser
    RECOMMENDED
    TARGETS Kori
    DEPENDS BrowserSettings ImageDecoder RequestServer WebContent
)

stringify_gml(BrowserWindow.gml BrowserWindowGML.h browser_window_gml)
stringify_gml(EditBookmark.gml EditBookmarkGML.h edit_bookmark_gml)
stringify_gml(FindInPageWidget.gml FindInPageWidgetGML.h find_in_page_widget_gml)
stringify_gml(History/HistoryWidget.gml HistoryWidgetGML.h history_widget_gml)
stringify_gml(StorageWidget.gml StorageWidgetGML.h storage_widget_gml)
stringify_gml(Tab.gml TabGML.h tab_gml)

set(SOURCES
    BookmarksBarWidget.cpp
    BrowserWindow.cpp
    CookiesModel.cpp
    DownloadWidget.cpp
    FindInPageWidget.cpp
    History/HistoryModel.cpp
    History/HistoryWidget.cpp
    IconBag.cpp
    InspectorWidget.cpp
    StorageModel.cpp
    StorageWidget.cpp
    Tab.cpp
    TaskManagerWidget.cpp
    URLBox.cpp
    WindowActions.cpp
    main.cpp
)

set(GENERATED_SOURCES
    BrowserWindowGML.h
    EditBookmarkGML.h
    FindInPageWidgetGML.h
    HistoryWidgetGML.h
    StorageWidgetGML.h
    TabGML.h
)

serenity_app(Kori ICON app-kori)
target_link_libraries(Kori PRIVATE LibCore LibWebView LibWeb LibProtocol LibGUI LibDesktop LibConfig LibGfx LibIPC LibJS LibLocale LibMain LibSyntax LibURL)

install(CODE "file(CREATE_LINK Kori ${CMAKE_INSTALL_PREFIX}/bin/Browser SYMBOLIC)")
